--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <h4>Index</h4>
+  <h4>Index.html</h4>
   <app-root></app-root>
 </body>
 </html>
